# qexow-cam

./: .gitignore  Cargo.toml  README.md  boss.md  cam.cmd  codex-send.cmd  index.html  installer.iss  package-lock.json  package.json  test-status.cs
.github/workflows/: release.yml
docs/: cam-100-issue-implementation-audit-v2.1.31.md  cam-diagnostic-test-issues-v2.1.30.md  chat-classification-complete-knowledge.md  chat-classifier-diagram.md  classifier-registration-critique-and-response.md  diagnostic-delivery-semantics.md  local-chat-classifier-detail.md  mission-critical-enrollment-software-correction.md  rust-implementation-doctrine.md  rust-rewrite-spec-outline.md  rust-rewrite-v1-spec.md  software-architecture-decisions-v1.md  software-best-practices-brainstorm.md  variable-vs-software-subsystem-doctrine.md  violation-report-local-desktop-remote-chat-classification.md
docs/tests/: test-01-install-windows.md  test-04-auto-discover-remote-codex-chats.md
gui/electron/: main.cjs  preload.cjs  prepare-cam-binary.cjs
rust/src/: cli.rs  core.rs  delivery.rs  delivery_transaction.rs  discovery.rs  errors.rs  event_contracts.rs  lib.rs  local_api.rs  local_status.rs  logging.rs  (+5 more)
scripts/: assert-no-stale-installed-cam.ps1  build.mjs  smoke-local.js  verify-strict-contract.mjs
src/: antigravity.js  api.js  app-server.js  cli.js  codex-send.js  config.js  daemon-entry.js  daemon.js  discovery-refresh.js  logger.js  node-discovery.js  paths.js  peer-doc-discovery.js  query_threads.py  registry.js  remote_query_threads.js  remote_query_threads.py  thread-discovery.js
(+9 files in other folders)
