[package]
name = "qexow-cam"
version = "0.1.0"
edition = "2024"
description = "Ground-up Rust implementation for Qexow CAM"
license = "UNLICENSED"

[lib]
path = "rust/src/lib.rs"

[[bin]]
name = "qexow-cam"
path = "rust/src/main.rs"

[dependencies]
hmac = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }
